# FEUP-CAL

./: .gitignore  CMakeLists.txt  README.MD  main.cpp
resources/: CollectingPoints  Users
resources/Mapa da cidade do Porto-20210513/: extra points.txt  porto_full_edges.txt  porto_full_nodes_xy.txt  porto_strong_edges.txt  porto_strong_nodes_tags.txt  porto_strong_nodes_xy.txt
src/: Address.cpp  Address.h  CollectingPoint.cpp  CollectingPoint.h  Container.cpp  Container.h  Graph.h  Menu.cpp  Menu.h  User.cpp  User.h  WasteApp.cpp  WasteApp.h  parser.cpp  parser.h
